Evaluation updates: Reset dialogue button, smaller font, no close icons for tabs, image clipping problem fix,  unselect elements after merge, no sample questions, no test button

--- a/public/collaborative-app/css/platform.css
+++ b/public/collaborative-app/css/platform.css
@@ -346,7 +346,7 @@ input[type="file"] {
     /*right: 100px;*/
     margin-left: 0px; /* to overwrite ul */
     margin-bottom: 0px;
-    padding-top: 10px;
+    padding-top: 5px;
     top: 5px;
     background: #f4f4f4;
     /*left: 155px;*/
@@ -354,6 +354,8 @@ input[type="file"] {
     left: 95px;
     bottom: 210px;
     font-size: small;
+    padding-left:5px;
+    padding-right:5px;
 
 
 }
@@ -364,7 +366,7 @@ input[type="file"] {
     background: #fefefe;
     white-space: pre-wrap;
     word-wrap: break-word;
-    width: 99%;
+    width: 100%;
 
 
     margin-top: 5px;
@@ -402,6 +404,19 @@ input[type="file"] {
     margin-right: 5px;
 
     color: #0b9bcd;
+    font-size: large;
+
+
+}
+
+#reset-conversation{
+
+    position: absolute;
+    right: 0px;
+    /*margin-left: 100px;*/
+    margin-right: 5px;
+
+
     font-size: large;
 
 
